--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ethersproject/shims": "^5.7.0",
     "ethers": "^5.7.2",
     "expo": "~48.0.5",
+    "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
     "patch-package": "^6.5.1",
     "react": "18.2.0",
